Trying a latest feature on the home page. Commented out for the time being.

--- a/src/_posts/2020-04-25-walker.md
+++ b/src/_posts/2020-04-25-walker.md
@@ -7,3 +7,5 @@ categories: hamagucchi-2020
 tags: print-media
 ---
 This is where i talk about the artwork alone. Not as a series or a portfolio but kinda more critique like, this is what i did this js the statment anf blah blah blah.
+
+this totally isnt where i post thing and it should be deleted haha. unless i keep this post more as a how i did and include other photos as stuff?
